Fix calling enumerator methods such as with_index on Enumerator::Chain

This previously raised a TypeError.  Wrap the Enumerator::Chain in
an Enumerator to work around the problem.

Fixes [Bug #17216]